[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/EBGaramond-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/default_slot_hover.png" type="Texture" id=2]
[ext_resource path="res://GodetteVN/Core/SNL/SaveSlotTemplates/saveSlot.gd" type="Script" id=3]
[ext_resource path="res://GodetteVN/Core/SNL/SaveSlotTemplates/thumbnail.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="saveSlot" type="TextureButton"]
margin_right = 1600.0
margin_bottom = 150.0
texture_hover = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 120.0
size_flags_horizontal = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="emptySpace" type="Control" parent="HBoxContainer"]
margin_right = 15.0
margin_bottom = 120.0
rect_min_size = Vector2( 15, 110 )
mouse_filter = 2

[node name="thumbnail" parent="HBoxContainer" instance=ExtResource( 4 )]

[node name="emptySpace2" type="Control" parent="HBoxContainer"]
margin_left = 198.0
margin_right = 248.0
margin_bottom = 120.0
rect_min_size = Vector2( 50, 110 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 252.0
margin_right = 1600.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 1348.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="saveInfo" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 1348.0
margin_bottom = 65.0
mouse_filter = 2
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false

[node name="saveTime" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 1348.0
margin_bottom = 120.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.294118, 0.290196, 0.290196, 1 )
custom_fonts/font = SubResource( 2 )
text = "??/??/???? ??:??:??"
align = 1
valign = 1

[connection signal="pressed" from="." to="." method="_on_saveSlot_pressed"]
